--- a/422_Tikkonen/App.xaml
+++ b/422_Tikkonen/App.xaml
@@ -1,9 +1,8 @@
 ﻿<Application x:Class="_422_Tikkonen.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:_422_Tikkonen"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <ResourceDictionary Source="Dictionary.xaml"/>
     </Application.Resources>
 </Application>
